--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "realrashid/sweet-alert": "^7.0",
+        "silviolleite/laravelpwa": "^2.0",
         "twilio/sdk": "^7.3"
     },
     "require-dev": {
